MMA-8518 Upgrade to Spring Boot 4.0.5
- Parent POM 3.5.8 → 4.0.5 (Spring Framework 7, Java 25)
- token-support 5.0.37 → 6.0.4, resilience4j 2.3.0 → 2.4.0 (`resilience4j-spring-boot4`)
- Renamed starters: web→webmvc, aop→aspectj, spring-kafka→starter-kafka
- Jackson 2→3: ObjectMapper→JsonMapper, updated core/databind imports
- Retry: `@EnableRetry`→`@EnableResilientMethods`, resilience4j `@Retry`→Spring native `@Retryable`
- WireMock: spring-cloud-contract→wiremock-spring-boot 4.2.1, use `wiremock.server.baseUrl`
- Property renames: server.error.*→spring.web.error.*
- Jackson 3 fail-on-null-for-primitives=false (restore Jackson 2 behavior)
- Autoconfigure package moves for Boot 4 modularization
- logstash-logback-encoder 8.1→9.0
- Fixed wrong repr-api test response files
- Removed secureLogs from deploy file

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>